--- a/original-genie.html
+++ b/original-genie.html
@@ -1,27 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GloboCorp GPT Genie</title>
-    <link rel="stylesheet" href="style.css">
-    <script type="module" src="script.js"></script>
+	<style>
+		.message { margin: 5px 0; }
+		.user { background: lightblue; text-align: right; }
+		.bot { background: lightgray; }
+	</style>
 </head>
+<body style="font-family: Arial; margin: 20px;">
+<h1 style="color: red;">GloboCorp's GPT Genie</h1>
+<p>Tell us your wishes and all of your dreams will come true!</p>
+<div id="chat" style="border: 1px solid black; height: 200px; overflow-y: scroll; padding: 10px;"></div>
+<br>
+<input type="text" id="input" onkeypress="if(event.keyCode==13) send()" />
 
-<body>
-    <noscript>
-        <div class="no-js-warning">This app requires JavaScript to function properly. Please enable it in your browser.</div>
-    </noscript>
-    <h1>GloboCorp's GPT Genie</h1>
-    <p>Tell us your wishes and all of your dreams will come true!</p>
-    
-    <div id="chat"></div>
-    <br>
+<button onclick="send()">Send</button>
 
-    <div id="input-container">
-        <p>Your message</p>
-        <input type="text" id="input" placeholder="What are your wishes mighty customer?"/>
-        <send-button></send-button>
-    </div>
+<script>
+	// Written by mlazze@globocorp.com - email me at mlazze1337dev@gmail.com for freelance work!
+	var messages = [];
+	var count = 0;
+
+	function send() {
+		var input = document.getElementById('input');
+		var prompt = input.value;
+
+		if (prompt == '') {
+			alert('Type something!');
+			return;
+		}
+
+		count++;
+		messages.push(prompt);
+
+		var chat = document.getElementById('chat');
+		chat.innerHTML += '<div class="message user">You: ' + prompt + '</div>';
+		input.value = '';
+
+		// TODO: Simulate the chat for now
+		// replace with a to askGPTGenie(prompt)
+
+		setTimeout(function() {
+			var replies = ["Cool!", "Awesome!", "Noice", "Killer idea", "Lowkey fire", "Fire", "Goated idea", "I hear you...", "Sounds like a plan"];
+			var reply = replies[Math.floor(Math.random() * replies.length)];
+			chat.innerHTML += '<div class="message bot">Bot: ' + reply + '</div>';
+			chat.scrollTop = chat.scrollHeight;
+		}, 500);
+		// End Simulate
+
+	}
+
+	var appVersion = "1.0";
+	var appName = "GloboCorp's GPT Genie";
+	console.log(appName + " " + appVersion + " loaded @ " + new Date());
+</script>
 </body>
 </html>
